--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ find_package(X11 QUIET)
 add_library(log_c STATIC
         extern/log.c/log.c
         extern/log.c/log.h)
-target_compile_options(log_c PRIVATE -DLOG_USE_COLOR)
+target_compile_options(log_c PRIVATE -DLOG_USE_COLOR -fPIC)
 
 
 if (NOT DEFINED RENDER_API)
