--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,11 @@ find_package(X11 QUIET)
 add_library(log_c STATIC
         extern/log.c/log.c
         extern/log.c/log.h)
-target_compile_options(log_c PRIVATE -DLOG_USE_COLOR -fPIC)
-
+if (UNIX)
+    target_compile_options(log_c PRIVATE -DLOG_USE_COLOR -fPIC)
+else ()
+    target_compile_options(log_c PRIVATE -DLOG_USE_COLOR)
+endif()
 
 if (NOT DEFINED RENDER_API)
     set(RENDER_API "OPENGL")
